--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Demo</title>
+    <link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
+    <link type="image/icon" rel="icon" href="favicon.ico">
     <style>
         * {
             margin: auto;
